--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main {
-    background-image: url("logo.svg");
+    background-image: url("bg.svg");
     background-position: center center;
     background-size: max(1200px, 100vw);
     background-repeat: no-repeat;
